# AI-Startup-Predictor

./: README.md
src/: CMakeLists.txt  DataPoint.h  Dataset.cpp  Dataset.h  LogisticRegression.cpp  LogisticRegression.h  main  main.cpp  my_program  startup_predictor  test.cpp
src/main.dSYM/Contents/Resources/DWARF/: main
src/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
